deps/chakrashim/core/test/strict/strictkwd-deferred.baseline
SyntaxError: The use of a keyword for an identifier is invalid
	at code (strictkwd-deferred.js:8:17)
